--- a/getMemo.html
+++ b/getMemo.html
@@ -87,6 +87,9 @@
     <h1>DUCKY.MEMO</h1>
   </header>
 
+  <div class="container">
+    <h2 style="text-align: center; margin-bottom: 20px;">Upload Images for Your Memo</h2>
+
     <!-- Upload Field 1 -->
     <div class="upload-field">
       <label for="album1">Album 1:</label>
@@ -95,18 +98,18 @@
 
     <!-- Upload Field 2 -->
     <div class="upload-field">
-      <label for="album2">Album 2</label>
+      <label for="album2">Album 2:</label>
       <input type="file" id="album2" multiple accept="image/*">
     </div>
 
     <!-- Upload Field 3 -->
     <div class="upload-field">
-      <label for="album3">Album 3</label>
+      <label for="album3">Album 3:</label>
       <input type="file" id="album3" multiple accept="image/*">
     </div>
 
     <!-- Submit Button -->
-    <button id="submitBtn">ส่งรูปภาพทั้งหมด</button>
+    <button id="submitBtn">อัพโหลดภาพ</button>
 
     <!-- Status Message -->
     <div id="status"></div>
@@ -148,7 +151,7 @@
     });
 
     async function uploadFiles(files) {
-      const response = await fetch('https://script.google.com/macros/s/AKfycbw4RH1EbBdq0hCKK7aXfH-cIYlh_Su43WjhPCz-lzJoomYluka7ndQ48kFG_-uE48EVkQ/exec', {
+      const response = await fetch('https://script.google.com/macros/s/AKfycbxitFemOM8fRPsWUuH3_M_n7yPOa99oohERWQbMx8NrV9IXvkKA1kP6i3318M8rTMPCkg/exec', {
         method: 'POST',
         headers: {
           'Content-Type': 'application/json'
