--- a/getMemo.html
+++ b/getMemo.html
@@ -154,7 +154,7 @@
       const response = await fetch('https://script.google.com/macros/s/AKfycbxitFemOM8fRPsWUuH3_M_n7yPOa99oohERWQbMx8NrV9IXvkKA1kP6i3318M8rTMPCkg/exec', {
         method: 'POST',
         headers: {
-          'Content-Type': 'text/html'
+          'Content-Type': 'text/plain'
         },
         body: JSON.stringify({ files })
       });
